--- a/web/login.html
+++ b/web/login.html
@@ -9,7 +9,8 @@
 <body>
 <br>
 <h1>Вход в систему</h1>
-<form action="classes.web.Registration" method="post" name="registration">
+<form action="classes.web.BaseServletController" method="post" name="registration">
+    <input type="hidden" name="controllerName" value="Registration">
     <br>Пользователь:</br>
     <input type="text" name="user" >
     <br>Пароль:</br>
